package com.nanyin.pattern.factory.simpleFactory;

public interface Shoes {
    void getColor();
}
